101 ensure gallery is hidden on mobile after its opened at a desktop resolution before the app is resized (#106)
* 101 Ensure gallery pane is hidden on mobile resolutions after app resize

* 101 Ensure gallery is hidden on mobile after app resize

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -150,8 +150,8 @@ button:focus-visible {
 }
 .gallery-image {
   position: relative;
-  height: 30vh;
-  width: 30vh;
+  height: 15vh;
+  width: 15vh;
 }
 .max-width-one-third {
   max-width: 33%;
